--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,17 +6,13 @@ spring.mail.username=thhung3107@gmail.com
 spring.mail.password=ghdn opvq ucce lhpm
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
-
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=BrandShop;encrypt=false;trustServerCertificate=true
 spring.datasource.username=sa
-spring.datasource.password=pth07
+spring.datasource.password=1
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServerDialect  
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto = none
+spring.jpa.hibernate.ddl-auto=none
 spring.session.timeoutseconds=3600
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
-
-
